<resources>
    <string name="app_name">My Intermediate</string>
    <string name="email">Email Address</string>
    <string name="email_error">Email address is not valid</string>
    <string name="password">Password</string>
    <string name="password_error">Password must contain at least 6 characters</string>
    <string name="login">Login</string>
    <string name="have_account">Already have account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="not_have_account">Don\'t have account?</string>
    <string name="uploaded_at">Uploaded :</string>
    <string name="logout">logout</string>
    <string name="language_setting">Language Setting</string>
    <string name="stories">Stories</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_story">Add Story</string>
    <string name="select_image_from">Select image from :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="write_story_description">Write story description :</string>
    <string name="upload">Upload</string>
    <string name="select_image">Please select an Image</string>
    <string name="fill_description">Please fill the description</string>
    <string name="story_uploaded">Story Uploaded</string>
    <string name="failed_upload">Failed upload image</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="error_occured">An Error Occurred</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed, please try again</string>
    <string name="share_your_location">Share your location?</string>
    <string name="location_setting">Location setting</string>
    <string name="pls_activate_loc">Please activate location</string>
    <string name="loc_permission_not_allowed">Location Permission not allowed</string>
    <string name="change_setting">Change Setting</string>
    <string name="pls_check_gps">Please check your GPS</string>
    <string name="location">Location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="going_logout">You are going to logout from this app</string>
    <string name="cancel">Cancel</string>
    <string name="logout_success">Logged out successfully</string>
</resources>